--- a/presentations/git-geojson.html
+++ b/presentations/git-geojson.html
@@ -98,6 +98,7 @@ window.onload = function() {
 </script></head><body>
 <div><em>Learn GeoJSON!</em> (and maybe git and GitHub too)</div>
 <div>Shoutout to <a href="http://lyzidiamond.com">Lyzi Diamond</a> for this slide deck</div>
+<div>Complete tutorial posted at <a href="bit.ly/maptimesea_002" target="_blank">bit.ly/maptimesea_002</a></div>
 <div>What is <em>GeoJSON</em>?</div>
 <div><em>GeoJSON:</em> geographic data format. (Contains spatial information.)</div>
 <div><em>GeoJSON:</em> extension of JSON, with a specific structure.</div>
