adding @broadstreetmaps and WeWork to the thx

--- a/presentations/git-geojson.html
+++ b/presentations/git-geojson.html
@@ -98,6 +98,7 @@ window.onload = function() {
 </script></head><body>
 <div><em>Learn GeoJSON!</em> (and maybe git and GitHub too)</div>
 <div>Shoutout to <a href="http://lyzidiamond.com">Lyzi Diamond</a> for this slide deck</div>
+<div>Thx to<br><a href="http://broadstreetmaps.org">Broad Street Maps</a> &<br><a href="https://twitter.com/weworksea">@WeWorkSEA</a><br>for the space!</div>
 <div>Complete tutorial posted at <a href="bit.ly/maptimesea_002" target="_blank">bit.ly/maptimesea_002</a></div>
 <div>What are we doing today?</div>
 <div>GeoJSON, Git, Github, Fork & Pull</div>
