update to branches

--- a/presentations/git.html
+++ b/presentations/git.html
@@ -171,7 +171,7 @@ window.onload = function() {
 <div class="title">Our goals today ...</div>
 <div>1.<br>Git vocab quest</div>
 <div>2.<br><code>git</code> & the command line</div>
-<div>3. Workflow tutorials<br>- personal<br>- organizational<br>- fork & pull<br>- merge conflicts</div>
+<div>3. Workflow tutorials<br>- personal<br>- branching<br>- fork & pull<br>- merge conflicts</div>
 <div>4.<br>GitHub pages <small>(if time permits)</small></div>
 
 <div class="title">Git vocab quest</div>
@@ -227,7 +227,7 @@ window.onload = function() {
 <div>6.<br> <strong>Commit</strong> the file with <br><small><code>git commit -m 'your message'</code></small></div>
 <div>7.<br> <strong>Push</strong> the changes to your remote with<br><small><code>git push origin master</code></small>.</div>
 
-<div class="title">Tutorial: Organizational Workflow</div>
+<div class="title">Tutorial: Branching</div>
 <div>1.<br> Back to your local computer, create a <strong>new branch</strong> with<br><small><code>git checkout -b new-branch-name</code></small></div>
 <div>2.<br> You can <strong>list all branches</strong> and see which branch you are currently on with <code>git branch</code></div>
 <div>3.<br> Make some changes and add those changes with <code>git add README.md</code></div>
