folder not a file

--- a/presentations/git.html
+++ b/presentations/git.html
@@ -211,7 +211,7 @@ window.onload = function() {
 <div>Create a new file<br><code>touch</code></div>
 <div>Git command<br><code>git</code></div>
 <div>Start a new Git project<br><code>git init</code></div>
-<div>A Git repository will have a file called <code>.git</code> which is typically hidden from your file finder</div>
+<div>A Git repository will have a directory called <code>.git</code> which is typically hidden from your file finder</div>
 <div>Add a remote to your git project<br><small><code>git remote add &lt;name&gt; &lt;url&gt;</code></small></div>
 <div>Add a file/change<br><code>git add &lt;file&gt;</code></div>
 <div>Commit all added changes<br><code>git commit</code></div>
