updated contact email address

--- a/presentations/git-geojson.html
+++ b/presentations/git-geojson.html
@@ -213,6 +213,6 @@ window.onload = function() {
 <div>Feel free to continue to <em>add</em> or <em>contribute</em> to the datasets on our repository.</div>
 <div>The best data is the data we make together! <em>:)</em></div>
 <div>Thanks.</div>
-<div>@maptimesea<br>seattle@maptime.io<br>meetup.com/MaptimeSEA</div>
+<div>@maptimesea<br>maptimesea@gmail.com<br>meetup.com/MaptimeSEA</div>
 
 </body></html>
